--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 <body>
     <main>
         <section id ="start">
-            <h2>Start</h2>
+            <h2 id="start-btn">Start</h2>
 
         </section>
         <section id="quiz" style="display: none;">
-            <h2>Quiz</h2>
+            <h2 class="answer">Quiz</h2>
             
         </section>
         <section id ="end" style="display: none;">
-            <h2>End</h2>
+            <h2 id="submit">End</h2>
 
         </section>
     </main>
