--- a/index.html
+++ b/index.html
@@ -1,29 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel ="stylesheet" href = "./assets/css/reset.css" />
-    <link rel ="stylesheet" href = "./assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/reset.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/dark.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
+
 <body>
     <main>
-        <section id ="start">
-            <h2 id="start-btn">Start</h2>
+        <section id="start">
+            <h2 >Harry Potter Trivia Quiz</h2>
+            <p> To answer a question, simply click one of the options displayed below the question. Once answered, the
+                quiz will progress forwards. Questions that are answered incorrectly will result in a 15 second penalty.
+                At the end of the quiz, enter your initials and click the submit button to keep track of your scores!
+            </p>
+            <button id="start-btn" type="button">Start Quiz</button>
 
         </section>
         <section id="quiz" style="display: none;">
             <h2 class="answer">Quiz</h2>
-            
+
         </section>
-        <section id ="end" style="display: none;">
+        <section id="end" style="display: none;">
             <h2 id="submit">End</h2>
 
         </section>
     </main>
 
-    <script src ="./assets/javascript/script.js"> </script> 
+    <script src="./assets/javascript/script.js"> </script>
 </body>
+
 </html>
