work on inserting answer options

--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
             <h2 class="answer">Quiz</h2>
 
         </section>
-        <section id="end" style="display: none;">
+        <section id="end" 
+        style="display: none;"
+        >
             <h2 id="submit">End</h2>
 
         </section>
