added basic quiz elements to html and add text to elements using currentQuestion function;add event listener for all answerbtns but failing to work past first question

--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@
 
         </section>
         <section id="quiz" style="display: none;">
-            <h2 class="answer">Quiz</h2>
+            <h2 >Quiz</h2>
+            <h3 class="question"></h3>
+            <button class="btn1 answer" type="button"></button>
+            <button class="btn2 answer" type="button"></button>
+            <button class="btn3 answer" type="button"></button>
+            <button class="btn4 answer" type="button"></button>
 
         </section>
         <section id="end" 
