add answer key and add for loop to alert if user clicks correct choice or incorrect choice; add setTimeout to allow result to show on same screen

--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
         <section id="quiz" style="display: none;">
             <h2 >Quiz</h2>
             <h3 class="question"></h3>
-            <button class="btn1 answer" type="button"></button>
-            <button class="btn2 answer" type="button"></button>
-            <button class="btn3 answer" type="button"></button>
-            <button class="btn4 answer" type="button"></button>
+            <input type="button" class="btn1 answer" value=""></input>
+            <input class="btn2 answer" type="button" value=""></input>
+            <input class="btn3 answer" type="button" value=""></input>
+            <input class="btn4 answer" type="button" value=""></input>
+            <p class="answer-result"></p>
 
         </section>
         <section id="end" 
