--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <main>
         <section id="start">
-            <h2 >Harry Potter Trivia Quiz</h2>
+            <h2>Harry Potter Trivia Quiz</h2>
             <p> To answer a question, simply click one of the options displayed below the question. Once answered, the
                 quiz will progress forwards. Questions that are answered incorrectly will result in a 15 second penalty.
                 At the end of the quiz, enter your initials and click the submit button to keep track of your scores!
@@ -23,7 +23,7 @@
 
         </section>
         <section id="quiz" style="display: none;">
-            <h2 >Quiz</h2>
+            <h2>Quiz</h2>
             <h3 class="question"></h3>
             <input type="button" class="btn1 answer" value=""></input>
             <input class="btn2 answer" type="button" value=""></input>
@@ -32,10 +32,13 @@
             <p class="answer-result"></p>
 
         </section>
-        <section id="end" 
-        style="display: none;"
-        >
-            <h2 id="submit">End</h2>
+        <section id="end" style="display: none;">
+            <h2>That's the End!</h2>
+            <p class="score"></p>
+            <form class="user-info">
+            <input type="text" id="initials" placeholder="Enter Initials">Enter your initials to track your score!</input>
+            <input type="submit" id="submit" value="Submit"> 
+            </form>
 
         </section>
     </main>
