add and debug local storage so user initials and score is saved each time initials are submitted

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
         <section id="quiz" style="display: none;">
             <h2>Quiz</h2>
             <h3 class="question"></h3>
-            <input type="button" class="btn1 answer" value=""></input>
-            <input class="btn2 answer" type="button" value=""></input>
-            <input class="btn3 answer" type="button" value=""></input>
-            <input class="btn4 answer" type="button" value=""></input>
+            <input type="button" class="btn1 answer" value=""/>
+            <input class="btn2 answer" type="button" value="" />
+            <input class="btn3 answer" type="button" value="" />
+            <input class="btn4 answer" type="button" value="" />
             <p class="answer-result"></p>
 
         </section>
@@ -36,12 +36,17 @@
             <h2>That's the End!</h2>
             <p class="score"></p>
             <form class="user-info">
-            <input type="text" id="initials" placeholder="Enter Initials">Enter your initials to track your score!</input>
-            <input type="submit" id="submit" value="Submit"> 
+                <input type="text" id="initials" placeholder="Enter Initials"/>
+                <input type="submit" id="submit" value="Submit">
             </form>
-
         </section>
-    </main>
+        <section id="scoresheet">
+            <h2>High Scores</h2>
+            
+            <input type="button" id="play-again" value="Play Again">
+        </section>
+    </main> 
+
 
     <script src="./assets/javascript/script.js"> </script>
 </body>
