test adding user name to scoreSheetEl using local storage and .innerHTML

--- a/index.html
+++ b/index.html
@@ -36,12 +36,13 @@
             <h2>That's the End!</h2>
             <p class="score"></p>
             <form class="user-info">
-                <input type="text" id="initials" placeholder="Enter Initials"/>
+                <input type="text" id="initials" placeholder="Enter Initials" value=""/>
                 <input type="submit" id="submit" value="Submit">
             </form>
         </section>
         <section id="scoresheet">
             <h2>High Scores</h2>
+            <p id="test"></p>
             
             <input type="button" id="play-again" value="Play Again">
         </section>
