begin to build timer for game

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         </section>
         <section id="quiz" style="display: none;">
             <h2>Quiz</h2>
+            <p class="timer-element"></p>
             <h3 class="question"></h3>
             <input type="button" class="btn1 answer" value="" />
             <input class="btn2 answer" type="button" value="" />
@@ -48,9 +49,8 @@
                     <th>User</th>
                     <th>Score</th>
                 </tr>
-                <tr id="table-user"></tr>
                 
-                <tr id="table-score"></tr>
+                
 
             </table>
 
