reduce time by 15 seconds when answer choice is incorrect

--- a/index.html
+++ b/index.html
@@ -41,14 +41,9 @@
                 <input type="submit" id="submit" value="Submit">
             </form>
         </section>
-        <section id="scoresheet">
+        <section id="scoresheet" style="display: none;">
             <h2>High Scores</h2>
-            <p id="test"></p>
             <table id="table-data">
-                <tr id="table-head">
-                    <th>User</th>
-                    <th>Score</th>
-                </tr>
                 
                 
 
